[tool.poetry]
name = "fastapi-admin2"
version = "0.0.1a1"
description = ""
authors = ["Glib Garanin aka GLEF1X"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
babel = "^2.9.1"
aiofiles = "0.8.0"
aioredis = "^2.0.1"
fastapi = "^0.75.0"
jinja2 = "*"
python-multipart = "*"
pendulum = "2.1.2"
argon2-cffi = "^21.3.0"
orjson = "^3.6.6"

[tool.poetry.dev-dependencies]
# lint
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pylint = "*"
# example
asyncmy = "*"
python-dotenv = "*"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
gunicorn = "^20.1.0"
uvicorn = { version = "0.17.6", extras = ["standard"] }

coverage = "^6.2"

# orm dialects
tortoise-orm = "0.19.0"
SQLAlchemy = "^1.4.34"
sqlalchemy2-stubs = "0.0.2a21"
types-aiofiles = "*"

# subdeps of orm dialects
asyncpg = { git = "https://github.com/MagicStack/asyncpg", branch = "master"}

# example
dynaconf = "^3.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
