[tool.poetry]
name = "fastapi-admin2"
version = "0.0.1a1"
description = ""
authors = ["Glib Garanin aka GLEF1X"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
babel = "^2.9.1"
aioredis = "^2.0.1"
fastapi = "^0.79.1"
jinja2 = "3.1.2"
python-multipart = "0.0.5"
orjson = { optional = true, version = "^3.7.12"}
argon2-cffi = { optional = true, version = "^21.3.0"}

[tool.poetry.dev-dependencies]
# lint
black = "22.6.0"
flake8 = "5.0.4"
isort = "5.10.1"
mypy = "0.971"

# tests
pytest = "^7.1.1"
pytest-asyncio = "^0.19.0"

# orm dialects
tortoise-orm = "0.19.2"
SQLAlchemy = "^1.4.34"

# stubs
sqlalchemy2-stubs = "0.0.2a25"
types-aiofiles = "*"

# subdeps of orm dialects
asyncpg = "0.26"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
